[workspace]
members = [
    "mqcat-centrifuge",
    "mqcat-commons",
    "mqcat-nats",
    "mqcat-zenoh",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
clap = { version = "4.5.48", features = ["derive"] }
futures-util = { version = "0.3.31" }
log = "0.4.28"
tokio = { version = "1.47.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
strip = "symbols"
