[package]
name = "mqcat"
description = "CLI pub/sub client (supports zenoh/nats/mqtt/centrifuge)"
version = "0.2.1"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
# generic dependencies
anyhow = "1.0.100"
async-stream = "0.3.6"
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = { version = "3.5.0", features = ["termination"] }
futures-util = { version = "0.3.31" }
go-parse-duration = "0.1.1"
log = "0.4.28"
shlex = "1.3.0"
tokio = { version = "1.47.1", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# backend dependencies - centrifuge
tokio-centrifuge = { version = "0.2.6", default-features = false, features = ["rustls-tls-native-roots"], optional = true }

# backend dependencies - nats
async-nats = { version = "0.43.0", optional = true }

# backend dependencies - zenoh
serde_json = { version = "1.0.145", optional = true }
zenoh = { version = "1.5.1", features = ["internal", "unstable"], optional = true }

# deps for self-upgrade
serde = { version = "1.0.226", features = ["derive"], optional = true }
ureq = { version = "3.1.2", features = ["json"], optional = true }
zip = { version = "5.1.1", optional = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

[features]
default = ["backend-centrifuge", "backend-nats", "backend-zenoh"]
backend-centrifuge = ["dep:tokio-centrifuge"]
backend-nats = ["dep:async-nats"]
backend-zenoh = ["dep:serde_json", "dep:zenoh"]
self-upgrade = ["dep:serde", "dep:ureq", "dep:zip"]

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"

[profile.release]
strip = "symbols"
