[package]
name = "mqcat-centrifuge"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "mqcat-cf"
path = "src/main.rs"

[dependencies]
mqcat-commons = { path = "../mqcat-commons" }

# external crates
tokio-centrifuge = { version = "0.2.5", default-features = false, features = ["native-tls"] }

# workspace dependencies
anyhow = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
