[package]
name = "mqcat-commons"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
log = "0.4.27"
tokio = { version = "1.45.1", features = ["net", "sync"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
