[package]
name = "mqcat-commons"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
# external crates
ctrlc = { version = "3.5.0", features = ["termination"] }
go-parse-duration = "0.1.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
