[package]
name = "mqcat-nats"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "mqcat-nats"
path = "src/main.rs"

[dependencies]
mqcat-commons = { path = "../mqcat-commons" }

# external crates
async-nats = "0.42.0"

# workspace dependencies
anyhow = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
