[package]
name = "mqcat-zenoh"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "mqcat-z"
path = "src/main.rs"

[dependencies]
mqcat-commons = { path = "../mqcat-commons" }

# external crates
serde_json = "1.0.145"
zenoh = { version = "1.5.1", features = ["internal", "unstable"] }

# workspace dependencies
anyhow = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
