[package]
name = "mqcat"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
default-run = "mqcat"

[dependencies]
# own crates
mqcat-centrifuge = { path = "../mqcat-centrifuge" }
mqcat-commons = { path = "../mqcat-commons" }
mqcat-nats = { path = "../mqcat-nats" }
mqcat-zenoh = { path = "../mqcat-zenoh" }

# workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
