[package]
name = "mqcat"
description = "CLI pub/sub client (supports zenoh/nats/mqtt/centrifuge)"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
default-run = "mqcat"

[dependencies]
# own crates
mqcat-commons = { path = "../mqcat-commons" }
mqcat-centrifuge = { path = "../mqcat-centrifuge", optional = true }
mqcat-nats = { path = "../mqcat-nats", optional = true }
mqcat-zenoh = { path = "../mqcat-zenoh", optional = true }

# workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }

[features]
default = ["centrifuge", "nats", "zenoh"]
centrifuge = ["dep:mqcat-centrifuge"]
nats = ["dep:mqcat-nats"]
zenoh = ["dep:mqcat-zenoh"]

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
