[package]
name = "mqcat"
description = "CLI pub/sub client (supports zenoh/nats/mqtt/centrifuge)"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
default-run = "mqcat"

[dependencies]
# own crates
mqcat-commons = { path = "../mqcat-commons" }
mqcat-centrifuge = { path = "../mqcat-centrifuge", optional = true }
mqcat-nats = { path = "../mqcat-nats", optional = true }
mqcat-zenoh = { path = "../mqcat-zenoh", optional = true }

# workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

# deps for self-upgrade
serde = { version = "1.0.226", features = ["derive"], optional = true }
ureq = { version = "3.1.2", features = ["json"], optional = true }
zip = { version = "5.1.1", optional = true }

[features]
default = ["self-upgrade", "centrifuge", "nats", "zenoh"]
self-upgrade = ["dep:serde", "dep:ureq", "dep:zip"]
centrifuge = ["dep:mqcat-centrifuge"]
nats = ["dep:mqcat-nats"]
zenoh = ["dep:mqcat-zenoh"]

[lints.clippy]
len_zero = "allow"
uninlined_format_args = "allow"
